# GiddyUpModel

./: .gitignore  08_LIVE_PRICES.md  10_TROUBLESHOOTING.md  ABILITY_ONLY_APPROACH.md  ANSWER.md  BETTING_ANALYSIS_2024.md  BOOTSTRAP_COMPLETE.md  COMPLETE.md  DRAW_BIAS_EXPLAINED.md  EXECUTIVE_SUMMARY.md  FINAL_RECOMMENDATION.md  FINAL_SUMMARY.md  GIT_PUSH_GUIDE.md  HONEST_STATUS.md  Instructions.md  MARKET_FEATURES_ADDED.md  README.md  README_COMPLETE.md  READY_TO_TRAIN.md  STAKE_SIZE_RECOMMENDATION.md  TASKS_2_3_COMPLETE.md  TRAINING_COMPLETE_SUMMARY.md  TRAINING_IN_PROGRESS.md  env.template
giddyup/: .cleanup_complete  .cleanup_report  COMPLETE_READY.txt  DAILY_WORKFLOW.md  DEPLOYMENT_GUIDE_HYBRID.md  DEVELOPER_DATABASE_REQUIREMENTS.md  DIRECTORY_STRUCTURE.txt  EXECUTIVE_SUMMARY_OCT17.md  EXECUTIVE_SUMMARY_PATH_A.md  HIGH_AUC_EXPLAINED.md  HorseBackLayBot.py  HorseBot_Simple.py  MARKET_FEATURES.md  METHOD.md  PATH_A_RESULTS.md  PATH_B_FINAL_RESULTS.md  PATH_B_GUIDE.md  PATH_B_SUMMARY.md  PROJECT_OVERVIEW.txt  README.md  README_MODEL.md  READY_TO_DEPLOY.md  RESTRUCTURE_COMPLETE.md  START_HERE_OCT17.md  STATUS_PATH_A.md  STRATEGY_COMPARISON.md  TRAINING_STATUS.md  UNIFIED_STRATEGIES_GUIDE.md  auto_results_monitor.py  generate_betting_card.py  generate_betting_report.py  generate_result_tweets.py  giddyup-bot.service  horsebot_requirements.txt  live_results_monitor.py  mlflow.db  pyproject.toml  results_checker.py  show_daily_pnl.py  stream_mode.py  (+2 more)
giddyup/config/: HorseBot_config.template.py  path_b_hybrid.yaml  telegram_config.template.py  twitch_config.template.py
(+142 files in other folders)
